--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     <div class="line-by adsense adsbygoogle">
         <article itemscope itemtype="http://schema.org/TechArticle"  id="post-page" >
 
-            <a itemprop="url" class="post-link" href="{{ site.url }}{{ page.url }}"><h2 itemprop="headline" id="post-title">{{ page.title }}</h2></a>
+            <h2 itemprop="headline" id="post-title">{{ page.title }}</h2>
 
             <span class="time-auth"><time class="by-line" >{{ page.date | date: '%B %d, %Y' }}</time>&#44;&nbsp;&nbsp;<div class="post-view" id="ga-pageviews"></div></span> 
             {% include post-tags.html %}	
