--- a/_includes/head.html
+++ b/_includes/head.html
@@ -75,6 +75,11 @@
    
     <!-- Canonical -->
 <link rel="canonical" href="{{ page.url | prepend: site.url }}">
+
+
+<link href='https://fonts.googleapis.com/css?family=Source+Serif+Pro' rel='stylesheet' type='text/css'>
+
+
 {% if site.ad == 'no' %}{% else %}  
  {% if page.layout == 'post' %}
  
