--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,8 +26,7 @@
         {% else %} 
           <a class="page-link archive" href="/archive/">Archive</a>
         {% endif %} 
-          
-          
+
         {% if page.url == '/contact/' %}
          <a class="page-link contact" style="border-bottom: 4px solid #f1c40f" href="/contact/">Contact</a>
         {% else %} 
@@ -39,7 +38,7 @@
         {% if page.url == '/jekyll-themes/' %}
          <a class="page-link themes" style="border-bottom: 2px solid #9b59b6" target="_blank" href="/jekyll-themes/"><small>Themes</small></a>
         {% else %} 
-         <a class="page-link sitemap" target="_blank" href="/jekyll-themes/"><small>Themes</small></a>
+         <a class="page-link themes" target="_blank" href="/jekyll-themes/"><small>Themes</small></a>
         {% endif %}
          
 <a class="page-link subscribe" href="http://eepurl.com/bZdvSP" onclick="window.open(this.href, 'mywin',
