--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,8 +1,7 @@
 .news {
-    margin:0 auto;
-    max-width: 90%;
-    margin-top: 1em;
+    margin: 2em 0 2em 0;
     text-align: center;
+    max-width: 90%;
 }
 
 
@@ -279,5 +278,9 @@ a {
     border-radius: 0px 0px 2px 2px;
     border-top: 2px solid rgba(0, 0, 0, 0.14);
 }
+
+
+
+
 
 
