--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ layout: default
                     {{ content }}
             </div>
             </article>	
+            <p><small class="edit">Something isn't right or missing in this article? <a  href="https://github.com/sharu725/blog-v3/tree/gh-pages/_posts" target="_blank">Edit and create a pull request</a></small></p>
             {% include share.html %}
             
             <br />
