--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,9 @@
 layout: compress
 ---
 <!DOCTYPE html>
+<script>if (window.location.protocol != "https:")
+    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+</script>
 <html lang="en">
           {% include head.html %}
 <body>
