--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <script>if (window.location.protocol != "https:")
     window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
 </script>
-<html lang="en">
+<html lang="en-US">
           {% include head.html %}
 <body>
      <div id="top"></div>
