--- a/_includes/footer-1.html
+++ b/_includes/footer-1.html
@@ -10,7 +10,7 @@
 
    <div class="column-center">
     
-       <a class="" href="http://webjeda.com" target="_blank"><img alt="built by webjeda" width="110px" height="20px" id="footer-logo" src="/img/built-by-webjeda.svg"></a>  
+       <a class="" href="http://webjeda.com" target="_blank"><img alt="built by webjeda" width="110" height="20" id="footer-logo" src="/img/built-by-webjeda.svg"></a>  
         
   
    </div>
