--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
 <script type="application/ld+json">
   {
     "@context": "http://schema.org",
-    "@type": "BlogPosting",
+    "@type": "TechArticle",
     "name": "WebJeda | {%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
     "headline": "{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}",
     
