--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 
             <h2 itemprop="headline" id="post-title">{{ page.title }}</h2>
 
-            <span class="time-auth"><time class="by-line" >{{ page.date | date: '%B %d, %Y' }}</time>&#44;&nbsp;&nbsp;<div class="post-view" id="ga-pageviews"></div></span> 
+            <div class="time-auth"><time class="by-line" >{{ page.date | date: '%Y-%B-%d' }}</time>&#44;&nbsp;&nbsp;<div class="post-view" id="ga-pageviews"></div></div> 
             {% include post-tags.html %}	
             <div itemprop="articleBody" class="content" >
                     {{ content }}
