--- a/_includes/you-may-also-like.html
+++ b/_includes/you-may-also-like.html
@@ -47,7 +47,7 @@
           <a href="{{ site.baseurl }}{{ post.url }}">
               <div class="rel">
                   <h5>{{ post.title }}</h5>
-                  <img alt="{{post.title}}" width="100%" src="/thumbs-small/{{post.image}}">
+                  <img alt="{{post.title}}" src="/thumbs-small/{{post.image}}">
               </div>
           </a>
 
