--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: default
 <div class="page-content">
     <br />
                  {% include adsense-pt.html %} 
-    <div class="line-by">
-        <article itemscope itemtype="http://schema.org/TechArticle"  id="post-page" >
+    <div itemscope itemtype="http://schema.org/TechArticle"  class="line-by">
+        <article  id="post-page" >
 
             <h2 itemprop="headline" id="post-title">{{ page.title }}</h2>
 
