--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -758,3 +758,21 @@ a.btn {
 .links {
  display: block;
 }
+
+.eee {
+    color: #fff;
+    &:hover{
+        color: #333;
+    }
+}
+
+.ml2 {
+    margin-left: 2em;
+    @include media-query($on-palm) {
+        margin-left: 0;
+    }
+    
+}
+.mt2 {
+    margin-top: 2em;
+}
