--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -287,7 +287,7 @@ a {
 
 .preface {
     width: 80%;
-    margin: 20px auto;
+    margin: 0px auto 0 auto;
     @include media-query($on-palm) {
         width: 100%;
         margin: 0 auto;
