--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="page-content">
+
+ <main class="page-content" aria-label="Content">
 <div class="main-content">
 <article class="post">
 <header class="post-header">
@@ -14,4 +15,4 @@ layout: default
 
 </article>
     </div>
-</div>
+</main>
