--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
   
-<div class="page-content">
+ <main class="page-content" aria-label="Content">
     <br />
                  {% include adsense-pt.html %} 
     <div itemscope itemtype="http://schema.org/TechArticle"  class="line-by">
@@ -38,7 +38,7 @@ layout: default
     </div>
     
              
-</div>
+</main>
               
 
 {% if site.ad == 'no' %}{% else %}
