--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,21 +1,11 @@
+<div id="disqus_thread"></div>
 <script>
-var disqus_loaded = false;
 
-function load_disqus()
-{
-  disqus_loaded = true;
-  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-  dsq.src = "http://webjeda.disqus.com/embed.js";
-  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-  var ldr = document.getElementById('disqus_loader');
-  ldr.parentNode.removeChild(ldr);
-
-}
-
-window.onscroll = function(e) {
-    if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
-
-        if (disqus_loaded==false){ load_disqus() };
-    }
-};
-</script> 
+(function() { 
+    var d = document, s = d.createElement('script');
+    s.src = '//webjeda.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
