--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,6 +36,7 @@
 
 
 <!-- Open Graph -->
+<meta property="fb:app_id" content="549480635219583">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="{%if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
