--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -281,26 +281,23 @@ a {
 
 
 
-
-
-
-
 .preface {
-    width: 80%;
-    margin: 0px auto 0 auto;
+    width: 100%;
+    margin: 0 auto 0 auto;
     @include media-query($on-palm) {
-        width: 100%;
         margin: 0 auto;
     }
         
 }
 
 .precont {
+    display: inline-block;
     background-color: $brand-color;
-    padding: 20px;
-    width: 45%;
+    padding: 1%;
+    width: 48%;
+    
     @include media-query($on-palm) {
-            width: 90%;
+            width: 100%;
             margin: 0 auto;
         }
 }
