--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -274,6 +274,7 @@ a.next:hover {
     position: fixed;
     right: 10%;
     bottom: 4%;
+    display: none;
     @include media-query($on-palm) {
         position: static;
     }
@@ -334,17 +335,17 @@ a.page-num:hover {
 //3 columns
 .column-left{ float: left; width: 33%; margin:0 auto;
     @include media-query($on-palm) {
-        float: none; width: 100%; margin:0 auto;
+        float: none; width: 100%; margin:10px auto; 
     }
 }
 .column-right{ float: right; width: 30%;
     @include media-query($on-palm) {
-        float: none; width: 100%; margin:0 auto;
+        float: none; width: 100%; margin:10px auto;
     }
 }
 .column-center{  width: 33%; margin:0 auto; display: inline-block;text-align: center;
     @include media-query($on-palm) {
-        float: none; width: 100%; margin:0 auto;
+        float: none; width: 100%; margin:10px auto;
     }
 }
 
