--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,6 +54,9 @@
     <!-- Canonical -->
 <link rel="canonical" href="{{ page.url | prepend: site.url }}">
  
+    <!-- Author -->
+<meta name="author" content="Sharath Kumar">
+   
     <!-- Favicon -->
 <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
 
@@ -61,12 +64,9 @@
 <link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-iphone-60x60.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-ipad-retina-152x152.png">
   <!-- Critical CSS -->
-  <style>
-          {% capture include_to_scssify %}
-          {% include critical.scss %}
-          {% endcapture %}
-          {{ include_to_scssify | scssify }}
-  </style>
+<link rel="stylesheet" href="{{ '/css/critical.css' | prepend: site.baseurl }}">
+  
+
 {% if site.ad == 'no' %}{% else %}  
  {% if page.layout == 'post' %}
     <!--   Adsense Script  -->
