--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,7 +55,10 @@
 <link rel="canonical" href="{{ page.url | prepend: site.url }}">
  
     <!-- Author -->
-<meta name="author" content="Sharath Kumar">
+<meta rel="author" content="Sharath Kumar">
+  
+   <!-- Publisher -->
+<link rel="publisher" href="https://plus.google.com/b/111361987929035019038/111361987929035019038"/>
    
     <!-- Favicon -->
 <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
