--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,14 +32,10 @@ window.onscroll = function()
             </div>
             </article>	
             <p><small class="edit">Something isn't right or missing in this article? <a  href="https://github.com/sharu725/blog-v3/edit/gh-pages/{{page.path}}" target="_blank">Edit and create a pull request</a></small></p>
+          
            
-            
-             <form action="//webjeda.us10.list-manage.com/subscribe/post?u=210acce5db69d3d4a04b0e25d&amp;id=bee17ce703" method="post" id="" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <h4>Get Free Updates + Cherry-picked Jekyll Theme List</h4>
-            <div class="mc-field-group">
-            <input style="width:90%" type="email" value="" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL"><input type="submit" value="✔" name="subscribe" style="background:none; border:0;color:#0a5;font-size:120%;cursor:pointer"  class="sub-arrow">
-            </div>
-            </form>
+            <br />
+            {% include form-post.html %}
             <br />
             <br />
             
